sandbox/JoltC/fp_jolt.pas


function JPC_BodyInterface_CreateBody(self: PJPC_BodyInterface; inSettings: PJPC_BodyCreationSettings): PJPC_Body; cdecl; external joltc;
function JPC_BodyInterface_CreateBodyWithID(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID; inSettings: PJPC_BodyCreationSettings): PJPC_Body; cdecl; external joltc;
function JPC_BodyInterface_CreateBodyWithoutID(self: PJPC_BodyInterface; inSettings: PJPC_BodyCreationSettings): PJPC_Body; cdecl; external joltc;
procedure JPC_BodyInterface_DestroyBodyWithoutID(self: PJPC_BodyInterface; inBody: PJPC_Body); cdecl; external joltc;
function JPC_BodyInterface_AssignBodyID(self: PJPC_BodyInterface; ioBody: PJPC_Body): Tbool; cdecl; external joltc;
function JPC_BodyInterface_UnassignBodyID(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID): PJPC_Body; cdecl; external joltc;
procedure JPC_BodyInterface_UnassignBodyIDs(self: PJPC_BodyInterface; inBodyIDs: PJPC_BodyID; inNumber: longint; outBodies: PPJPC_Body); cdecl; external joltc;
procedure JPC_BodyInterface_DestroyBody(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID); cdecl; external joltc;
procedure JPC_BodyInterface_DestroyBodies(self: PJPC_BodyInterface; inBodyIDs: PJPC_BodyID; inNumber: longint); cdecl; external joltc;
procedure JPC_BodyInterface_AddBody(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID; inActivationMode: TJPC_Activation); cdecl; external joltc;
procedure JPC_BodyInterface_RemoveBody(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID); cdecl; external joltc;
function JPC_BodyInterface_IsAdded(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID): Tbool; cdecl; external joltc;
function JPC_BodyInterface_CreateAndAddBody(self: PJPC_BodyInterface; inSettings: PJPC_BodyCreationSettings; inActivationMode: TJPC_Activation): TJPC_BodyID; cdecl; external joltc;
function JPC_BodyInterface_AddBodiesPrepare(self: PJPC_BodyInterface; ioBodies: PJPC_BodyID; inNumber: longint): pointer; cdecl; external joltc;
procedure JPC_BodyInterface_AddBodiesFinalize(self: PJPC_BodyInterface; ioBodies: PJPC_BodyID; inNumber: longint; inAddState: pointer; inActivationMode: TJPC_Activation); cdecl; external joltc;
procedure JPC_BodyInterface_AddBodiesAbort(self: PJPC_BodyInterface; ioBodies: PJPC_BodyID; inNumber: longint; inAddState: pointer); cdecl; external joltc;
procedure JPC_BodyInterface_RemoveBodies(self: PJPC_BodyInterface; ioBodies: PJPC_BodyID; inNumber: longint); cdecl; external joltc;
procedure JPC_BodyInterface_ActivateBody(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID); cdecl; external joltc;
procedure JPC_BodyInterface_ActivateBodies(self: PJPC_BodyInterface; inBodyIDs: PJPC_BodyID; inNumber: longint); cdecl; external joltc;
procedure JPC_BodyInterface_DeactivateBody(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID); cdecl; external joltc;
procedure JPC_BodyInterface_DeactivateBodies(self: PJPC_BodyInterface; inBodyIDs: PJPC_BodyID; inNumber: longint); cdecl; external joltc;
function JPC_BodyInterface_IsActive(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID): Tbool; cdecl; external joltc;
function JPC_BodyInterface_GetShape(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID): PJPC_Shape; cdecl; external joltc;
procedure JPC_BodyInterface_SetShape(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID; inShape: PJPC_Shape; inUpdateMassProperties: Tbool; inActivationMode: TJPC_Activation); cdecl; external joltc;
procedure JPC_BodyInterface_NotifyShapeChanged(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID; inPreviousCenterOfMass: TJPC_Vec3; inUpdateMassProperties: Tbool; inActivationMode: TJPC_Activation); cdecl; external joltc;
procedure JPC_BodyInterface_SetObjectLayer(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID; inLayer: TJPC_ObjectLayer); cdecl; external joltc;
function JPC_BodyInterface_GetObjectLayer(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID): TJPC_ObjectLayer; cdecl; external joltc;
procedure JPC_BodyInterface_SetPositionAndRotation(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID; inPosition: TJPC_RVec3; inRotation: TJPC_Quat; inActivationMode: TJPC_Activation); cdecl; external joltc;
procedure JPC_BodyInterface_SetPositionAndRotationWhenChanged(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID; inPosition: TJPC_RVec3; inRotation: TJPC_Quat; inActivationMode: TJPC_Activation); cdecl; external joltc;
procedure JPC_BodyInterface_GetPositionAndRotation(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID; outPosition: PJPC_RVec3; outRotation: PJPC_Quat); cdecl; external joltc;
procedure JPC_BodyInterface_SetPosition(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID; inPosition: TJPC_RVec3; inActivationMode: TJPC_Activation); cdecl; external joltc;
function JPC_BodyInterface_GetPosition(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID): TJPC_RVec3; cdecl; external joltc;
function JPC_BodyInterface_GetCenterOfMassPosition(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID): TJPC_RVec3; cdecl; external joltc;
procedure JPC_BodyInterface_SetRotation(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID; inRotation: TJPC_Quat; inActivationMode: TJPC_Activation); cdecl; external joltc;
function JPC_BodyInterface_GetRotation(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID): TJPC_Quat; cdecl; external joltc;
function JPC_BodyInterface_GetWorldTransform(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID): TJPC_RMat44; cdecl; external joltc;
function JPC_BodyInterface_GetCenterOfMassTransform(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID): TJPC_RMat44; cdecl; external joltc;
procedure JPC_BodyInterface_MoveKinematic(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID; inTargetPosition: TJPC_RVec3; inTargetRotation: TJPC_Quat; inDeltaTime: single); cdecl; external joltc;
procedure JPC_BodyInterface_SetLinearAndAngularVelocity(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID; inLinearVelocity: TJPC_Vec3; inAngularVelocity: TJPC_Vec3); cdecl; external joltc;
procedure JPC_BodyInterface_GetLinearAndAngularVelocity(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID; outLinearVelocity: PJPC_Vec3; outAngularVelocity: PJPC_Vec3); cdecl; external joltc;
procedure JPC_BodyInterface_SetLinearVelocity(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID; inLinearVelocity: TJPC_Vec3); cdecl; external joltc;
function JPC_BodyInterface_GetLinearVelocity(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID): TJPC_Vec3; cdecl; external joltc;
procedure JPC_BodyInterface_AddLinearVelocity(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID; inLinearVelocity: TJPC_Vec3); cdecl; external joltc;
procedure JPC_BodyInterface_AddLinearAndAngularVelocity(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID; inLinearVelocity: TJPC_Vec3; inAngularVelocity: TJPC_Vec3); cdecl; external joltc;
procedure JPC_BodyInterface_SetAngularVelocity(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID; inAngularVelocity: TJPC_Vec3); cdecl; external joltc;
function JPC_BodyInterface_GetAngularVelocity(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID): TJPC_Vec3; cdecl; external joltc;
function JPC_BodyInterface_GetPointVelocity(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID; inPoint: TJPC_RVec3): TJPC_Vec3; cdecl; external joltc;
procedure JPC_BodyInterface_SetPositionRotationAndVelocity(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID; inPosition: TJPC_RVec3; inRotation: TJPC_Quat; inLinearVelocity: TJPC_Vec3; inAngularVelocity: TJPC_Vec3); cdecl; external joltc;
procedure JPC_BodyInterface_AddForce(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID; inForce: TJPC_Vec3); cdecl; external joltc;
procedure JPC_BodyInterface_AddForceAtPoint(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID; inForce: TJPC_Vec3; inPoint: TJPC_RVec3); cdecl; external joltc;
procedure JPC_BodyInterface_AddTorque(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID; inTorque: TJPC_Vec3); cdecl; external joltc;
procedure JPC_BodyInterface_AddForceAndTorque(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID; inForce: TJPC_Vec3; inTorque: TJPC_Vec3); cdecl; external joltc;
procedure JPC_BodyInterface_AddImpulse(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID; inImpulse: TJPC_Vec3); cdecl; external joltc;
procedure JPC_BodyInterface_AddImpulse3(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID; inImpulse: TJPC_Vec3; inPoint: TJPC_RVec3); cdecl; external joltc;
procedure JPC_BodyInterface_AddAngularImpulse(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID; inAngularImpulse: TJPC_Vec3); cdecl; external joltc;
function JPC_BodyInterface_GetBodyType(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID): TJPC_BodyType; cdecl; external joltc;
procedure JPC_BodyInterface_SetMotionType(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID; inMotionType: TJPC_MotionType; inActivationMode: TJPC_Activation); cdecl; external joltc;
function JPC_BodyInterface_GetMotionType(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID): TJPC_MotionType; cdecl; external joltc;
procedure JPC_BodyInterface_SetMotionQuality(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID; inMotionQuality: TJPC_MotionQuality); cdecl; external joltc;
function JPC_BodyInterface_GetMotionQuality(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID): TJPC_MotionQuality; cdecl; external joltc;
procedure JPC_BodyInterface_GetInverseInertia(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID; outMatrix: PJPC_Mat44); cdecl; external joltc;
procedure JPC_BodyInterface_SetRestitution(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID; inRestitution: single); cdecl; external joltc;
function JPC_BodyInterface_GetRestitution(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID): single; cdecl; external joltc;
procedure JPC_BodyInterface_SetFriction(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID; inFriction: single); cdecl; external joltc;
function JPC_BodyInterface_GetFriction(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID): single; cdecl; external joltc;
procedure JPC_BodyInterface_SetGravityFactor(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID; inGravityFactor: single); cdecl; external joltc;
function JPC_BodyInterface_GetGravityFactor(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID): single; cdecl; external joltc;
procedure JPC_BodyInterface_SetUseManifoldReduction(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID; inUseReduction: Tbool); cdecl; external joltc;
function JPC_BodyInterface_GetUseManifoldReduction(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID): Tbool; cdecl; external joltc;
function JPC_BodyInterface_GetUserData(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID): Tuint64_t; cdecl; external joltc;
procedure JPC_BodyInterface_SetUserData(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID; inUserData: Tuint64_t); cdecl; external joltc;
procedure JPC_BodyInterface_InvalidateContactCache(self: PJPC_BodyInterface; inBodyID: TJPC_BodyID); cdecl; external joltc;

type
  PJPC_NarrowPhaseQuery = type Pointer;

  TJPC_NarrowPhaseQuery_CastRayArgs = record
    Ray: TJPC_RRayCast;
    Result: TJPC_RayCastResult;
    BroadPhaseLayerFilter: PJPC_BroadPhaseLayerFilter;
    ObjectLayerFilter: PJPC_ObjectLayerFilter;
    BodyFilter: PJPC_BodyFilter;
    ShapeFilter: PJPC_ShapeFilter;
  end;
  PJPC_NarrowPhaseQuery_CastRayArgs = ^TJPC_NarrowPhaseQuery_CastRayArgs;

function JPC_NarrowPhaseQuery_CastRay(self: PJPC_NarrowPhaseQuery; args: PJPC_NarrowPhaseQuery_CastRayArgs): Tbool; cdecl; external joltc;

type
  TJPC_RShapeCast = record
    Shape: PJPC_Shape;
    Scale: TJPC_Vec3;
    CenterOfMassStart: TJPC_RMat44;
    Direction: TJPC_Vec3;
  end;
  PJPC_RShapeCast = ^TJPC_RShapeCast;

procedure JPC_ShapeCastSettings_default(obj: PJPC_ShapeCastSettings); cdecl; external joltc;

type
  TJPC_NarrowPhaseQuery_CastShapeArgs = record
    ShapeCast: TJPC_RShapeCast;
    Settings: TJPC_ShapeCastSettings;
    BaseOffset: TJPC_RVec3;
    Collector: PJPC_CastShapeCollector;
    BroadPhaseLayerFilter: PJPC_BroadPhaseLayerFilter;
    ObjectLayerFilter: PJPC_ObjectLayerFilter;
    BodyFilter: PJPC_BodyFilter;
    ShapeFilter: PJPC_ShapeFilter;
  end;
  PJPC_NarrowPhaseQuery_CastShapeArgs = ^TJPC_NarrowPhaseQuery_CastShapeArgs;
